# bim-server

./: .gitignore  Cargo.toml  README.md  requirements.txt  run_tests.py  setup.py
.github/workflows/: build.yml  django.yml  release.yml
api/: Cargo.toml
api/src/: extractors.rs  lib.rs  machines.rs  pings.rs  targets.rs
bim/: manage.py
bim/bim/: asgi.py  jinja2.py  settings.py  urls.py  wsgi.py
bim/core/jinja2/flatpages/: default.html
bim/core/migrations/: 0001_initial.py
bim/rounds/: apis.py  schemas.py  views.py
bim/rounds/migrations/: 0001_initial.py
bim/servers/: admin.py  models.py  schemas.py  views.py
bim/servers/migrations/: 0001_initial.py  0002_machine_nickname_alter_machine_ip_alter_machine_name.py
entity/: Cargo.toml
entity/src/: lib.rs  machine.rs  ping.rs  prelude.rs  target.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241030_000001_create_machine.rs  m20241030_000002_create_target.rs  m20241030_000003_create_ping.rs  m20250812_134214_modify_ping.rs  m20250820_074013_add_updated.rs  m20250822_124135_add_key.rs
service/: Cargo.toml
service/src/: forms.rs  lib.rs  models.rs  mutation.rs  query.rs
speedtests/: apps.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
speedtests/migrations/: 0001_initial.py  0002_alter_server_provider.py  0003_serverlist_server_ids.py  0004_remove_serverlist_servers.py  0005_auto_20220817_0611.py  0006_auto_20220820_0641.py  0007_machine_machinetask_remove_serverresult_owner_and_more.py
src/: main.rs
tests/: settings.py  tests.py  urls.py
(+3 files in other folders)
