[package]
name = "server-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
server-service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-valid = "0.20"
axum-client-ip = "0.6"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace", "fs"] }
anyhow = "1.0"
dotenvy = "0.15"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
